updated logout functionality and theme

--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
+    "@types/express-session": "^1.17.10",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.20"
