--- a/clientt/package.json
+++ b/clientt/package.json
@@ -8,7 +8,9 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.8",
-    "@mui/material": "^5.15.7",
+    "@mui/lab": "^5.0.0-alpha.165",
+    "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^6.19.4",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,6 +22,8 @@
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
